current-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: otel-demo
    meta.helm.sh/release-namespace: otel-demo
  creationTimestamp: "2025-07-22T18:11:22Z"
  generation: 2
  labels:
    app.kubernetes.io/component: cart
    app.kubernetes.io/instance: otel-demo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cart
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/version: 2.0.2
    helm.sh/chart: opentelemetry-demo-0.37.1
    opentelemetry.io/name: cart
  name: cart
  namespace: otel-demo
  resourceVersion: "11633333"
  uid: e75bb1c2-e8a6-4a21-a470-cf508976274c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: cart
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: cart
        app.kubernetes.io/instance: otel-demo
        app.kubernetes.io/name: cart
        opentelemetry.io/name: cart
    spec:
      containers:
      - env:
        - name: OTEL_SERVICE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels['app.kubernetes.io/component']
        - name: OTEL_COLLECTOR_NAME
          value: otel-collector
        - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
          value: cumulative
        - name: CART_PORT
          value: "8080"
        - name: ASPNETCORE_URLS
          value: http://*:$(CART_PORT)
        - name: VALKEY_ADDR
          value: valkey-cart:6379
        - name: FLAGD_HOST
          value: flagd
        - name: FLAGD_PORT
          value: "8013"
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://$(OTEL_COLLECTOR_NAME):4317
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.name=$(OTEL_SERVICE_NAME),service.namespace=opentelemetry-demo,service.version=2.0.2
        image: ghcr.io/open-telemetry/demo:2.0.2-cart
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: cart
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 7070
          name: grpc
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: otel-demo
      serviceAccountName: otel-demo
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-07-22T18:11:44Z"
    lastUpdateTime: "2025-07-22T18:11:44Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-07-22T18:11:22Z"
    lastUpdateTime: "2025-07-22T18:13:29Z"
    message: ReplicaSet "cart-55584d7d7" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
