monitoring-grafana-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana-proxy
  namespace: otel-demo
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
